[gd_scene load_steps=10 format=3 uid="uid://g9h8i7j6k5l4m3"]

[ext_resource type="Texture2D" uid="uid://6nx03k6si5k7" path="res://Assets/SpriteSVG/plain-circle.svg" id="1_chasseur"]
[ext_resource type="PackedScene" uid="uid://b2mg3mjjofsdt" path="res://Composants/CMP_Movement.tscn" id="2_movement"]
[ext_resource type="PackedScene" uid="uid://bjddgxoyv846g" path="res://Composants/CMP_navigation.tscn" id="3_navigation"]
[ext_resource type="Texture2D" uid="uid://b1mvw0ooc4w68" path="res://Assets/SpriteSVG/plain-square.svg" id="4_indicator"]
[ext_resource type="PackedScene" uid="uid://dfhf540m5sc3n" path="res://Composants/Attacks/CMP_AttackParent.tscn" id="5_attack"]
[ext_resource type="PackedScene" uid="uid://c3int3imsbao6" path="res://Composants/CMP_Vie.tscn" id="6_life"]
[ext_resource type="PackedScene" uid="uid://pvpo8kprkut3" path="res://Composants/CMP_AgressionManager.tscn" id="7_aggression"]
[ext_resource type="Script" path="res://Assets/Script/SCR_ChasseurAmes.gd" id="8_script"]

[sub_resource type="CircleShape2D" id="CircleShape2D_chasseur"]
radius = 5.0

[sub_resource type="CircleShape2D" id="CircleShape2D_detection"]
radius = 180.0

[node name="ENT_ChasseurAmes" type="CharacterBody2D"]
collision_layer = 4
collision_mask = 2
script = ExtResource("8_script")

[node name="CMP_movement" parent="." node_paths=PackedStringArray("navigationComponent") instance=ExtResource("2_movement")]
navigationComponent = NodePath("../CMP_Navigation")
speed = 110.0
ennemy = true

[node name="CMP_Navigation" parent="." instance=ExtResource("3_navigation")]

[node name="SpriteCorps" type="Sprite2D" parent="."]
modulate = Color(0.9, 0.8, 0.6, 1.0)
scale = Vector2(0.05, 0.05)
texture = ExtResource("1_chasseur")

[node name="SpriteAiles" type="Sprite2D" parent="SpriteCorps"]
modulate = Color(1.0, 0.9, 0.7, 0.8)
position = Vector2(-100, 0)
rotation = -0.5
scale = Vector2(0.8, 1.5)
texture = ExtResource("4_indicator")

[node name="SpriteAiles2" type="Sprite2D" parent="SpriteCorps"]
modulate = Color(1.0, 0.9, 0.7, 0.8)
position = Vector2(100, 0)
rotation = 0.5
scale = Vector2(0.8, 1.5)
texture = ExtResource("4_indicator")

[node name="SpriteCornes" type="Sprite2D" parent="SpriteCorps"]
modulate = Color(0.8, 0.7, 0.5, 1.0)
position = Vector2(-30, -80)
rotation = -0.3
scale = Vector2(0.2, 0.6)
texture = ExtResource("4_indicator")

[node name="SpriteCornes2" type="Sprite2D" parent="SpriteCorps"]
modulate = Color(0.8, 0.7, 0.5, 1.0)
position = Vector2(30, -80)
rotation = 0.3
scale = Vector2(0.2, 0.6)
texture = ExtResource("4_indicator")

[node name="SpriteArc" type="Sprite2D" parent="SpriteCorps"]
modulate = Color(0.7, 0.6, 0.4, 1.0)
position = Vector2(80, -20)
rotation = 0.785398
scale = Vector2(0.3, 1.2)
texture = ExtResource("4_indicator")

[node name="SpriteOmbre" type="Sprite2D" parent="."]
modulate = Color(0.4, 0.3, 0.2, 0.4)
scale = Vector2(0.045, 0.045)
texture = ExtResource("1_chasseur")
z_index = -1

[node name="SpriteYeux" type="Sprite2D" parent="."]
modulate = Color(0.2, 0.6, 1.0, 1.0)
position = Vector2(1.5, -1.5)
scale = Vector2(0.009, 0.009)
texture = ExtResource("1_chasseur")

[node name="SpriteYeux2" type="Sprite2D" parent="."]
modulate = Color(0.2, 0.6, 1.0, 1.0)
position = Vector2(-1.5, -1.5)
scale = Vector2(0.009, 0.009)
texture = ExtResource("1_chasseur")

[node name="SpriteAura" type="Sprite2D" parent="."]
modulate = Color(1.0, 0.9, 0.7, 0.3)
scale = Vector2(0.08, 0.08)
texture = ExtResource("1_chasseur")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_chasseur")

[node name="CMP_AttackParent" parent="." instance=ExtResource("5_attack")]
TrackedCollision = 2

[node name="CmpVie" parent="." instance=ExtResource("6_life")]
Max_life = 4

[node name="CmpAgressionManager" parent="." node_paths=PackedStringArray("movementControler") instance=ExtResource("7_aggression")]
collision_layer = 2
collision_mask = 2
movementControler = NodePath("../CMP_movement")
defensive_mode = false

[node name="RangedDetection" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="RangedShape" type="CollisionShape2D" parent="RangedDetection"]
shape = SubResource("CircleShape2D_detection")
debug_color = Color(0.2, 0.6, 1.0, 0.2)

[node name="AttackTimer" type="Timer" parent="."]
wait_time = 2.5
autostart = true

[node name="ReloadTimer" type="Timer" parent="."]
wait_time = 0.5
autostart = false

[node name="SoulCaptureTimer" type="Timer" parent="."]
wait_time = 1.0
autostart = false

[node name="ProjectileSpawn" type="Marker2D" parent="."]
position = Vector2(4, -2)

[node name="TrajectoryLine" type="Line2D" parent="."]
width = 1.5
default_color = Color(0.2, 0.6, 1.0, 0.4)
z_index = 1

[node name="SoulOrbs" type="Node2D" parent="."]

[node name="EffetTir" type="CPUParticles2D" parent="."]
position = Vector2(4, -2)
emitting = false
amount = 8
lifetime = 0.5
speed_scale = 3.0
direction = Vector2(1, 0)
spread = 15.0
initial_velocity_min = 80.0
initial_velocity_max = 120.0
scale_amount_min = 0.3
scale_amount_max = 0.8
color = Color(0.2, 0.6, 1.0, 0.8)

[connection signal="death" from="CmpVie" to="." method="_on_cmp_vie_death"] 